2003-08-13  Werner Koch  <wk@gnupg.org>

	
	* src/oftpd.c (reopen_syslog_hack): Removed.
	(init_syslog_hack): Removed.  That was a whole stupid thing by me
	as I didn'd realized that we are running chroot and so the
	/dev/log socket could not be reopened by libc.
	(main): Print a warning if there is no /dev directory below the
	chroot.

	* src/file_list.c (file_nlst,file_list): Don't list "/dev".
	* src/ftp_session.c (change_dir, do_retr)
	(do_size, do_mdtm): Likewise.

2003-08-12  Werner Koch  <wk@gnupg.org>

	* src/oftpd.c (reopen_syslog_hack): Simply comparing the fd is not
	enough due to race conditions.  So always check whether the syslog
	fd is still bound to a unix domain socket.

2003-08-09  Werner Koch  <wk@gnupg.org>

	* src/oftpd.c (main): Give LOG_FACILITY file scope.
	(init_syslog_hack): New
	(reopen_syslog_hack): New.
	* src/ftp_session.c (set_pasv, open_connection): Insert
	reopen_syslog_hack calls.
	* src/ftp_listener.c (connection_acceptor, ftp_listener_init): Ditto.
	* src/ftp_session.c (open_connection): Ditto.
	
	* src/file_list.c: As an extra safeguard check the provided
	dir_len.
	(file_nlst): Ditto.
	(fdprintf): Extra paranoid safeguard for buggy vsnprintfs.

2003-05-22  Werner Koch  <wk@gnupg.org>

	* src/ftp_command.c (parse_offset): Fixed offset checking.

	* configure.in (AC_CHECK_SIZEOF): Add tests for off_t,
	unsigned long and unsigned long long. 

2003-05-06  Werner Koch  <wk@gnupg.org>

	* src/ftp_session.c (do_lprt): Do not set the port after emitting
	an error.  Fixes an assertion failure in ip_equal.

2003-05-05  Werner Koch  <wk@gnupg.org>

- New option -r, --pasv-range to limit the range for passive ports to
  specific firewall rules.

2001-05-28, Shane Kerr <shane@time-travellers.org>
- Version 0.3.6 released.
- Beat FreeBSD into submission.  Now compiles (and runs!) on FreeBSD
  out of the box.

2001-05-11, Shane Kerr <shane@time-travellers.org>
- Changed REST to only work for IMAGE (i.e. binary) mode.
- Added the SIZE command.